# lcgp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a_opt_init_results.json  all_results_so_far.json  environment.py  flamegraph.bash  graph.py  june_30_results_v1.json  kdtree.py  math_utils.py  pkg.txt  plot.py  requirements.txt  rigidity_library.py  sample_locs_curve_maze_uniform_test8_850samples_10nn_2len_8rob.txt  snl.py  swarm.py  test_a_optimality.py  test_configs.py  test_rigidity_snl.py  trial.py
.FAHClient/: FAHControl.db
.history/: README_20200110124537.md  README_20200821190509.md  README_20200821190641.md  README_20200821190730.md
conf/: FindIPOPT.cmake
experimental_py/: environment.py  flamegraph.bash  graph.py  kdtree.py  killplots.bash  mat_utils.py  math_utils.py  plot.py  recent_traj.txt  rrt_planner.py  snl.py  swarm.py  test_configs.py  test_rigidity_snl.py  trial.py
experimental_py/planners/: coupled_astar.py  decoupled_rrt.py  prioritized_prm.py
experimental_py/snl/: estimate_distance_matrix.py  estimate_snl.py  snl_sdp.py
experimental_py/snl_data/: localsolve_absolutenoise_1000rep_absolutematrix_6robots.xlsx  localsolve_absolutenoise_1000rep_relativematrix_14robots.xlsx  localsolve_addnoise_1000rep_6robots.xlsx  localsolve_relativenoise_1000rep_relativematrix_14robots.xlsx  localsolve_relativenoise_1000rep_relativematrix_6robots.xlsx  process_data.py  sdponly_absolutenoise_1000rep_absolutematrix_14robots.xlsx  sdponly_absolutenoise_1000rep_absolutematrix_6robots.xlsx  sdponly_relativenoise_1000rep_relativematrix_10robots.xlsx  sdponly_relativenoise_1000rep_relativematrix_14robots.xlsx
include/: geom.h  graph.h  helper.hpp  plot.h  robot.h  world.h
planners/: coupled_astar.py  coupled_lazysp.py  coupled_rrt.py  decoupled_rrt.py  potential_field.py  prioritized_prm.py  roadmap.py
planners/prioritized_planning/: a_star.py  constraint_sets.py  prioritized_prm.py
planners/roadmap/: lazysp_roadmap.py  manhattan_roadmap.py  random_roadmap.py  roadmap.py
post_processing/: a_opt_init_results.json  block_traj_correspondence.txt  eig_1_results.json  july_1_results_v2.json  june_30_results_1.txt  results_visualizer.py  traj_converter.py
post_processing/July 1/: july_1_prm_a_start_potential_field_results_v2.json  july_1_results_v1.json
post_processing/July 23/: july_23_prm_vary_num_agents.json
post_processing/June_30/: june_30_planning_times_prm_10_results_v2.json  june_30_planning_times_prm_25_results_v2.json  june_30_planning_times_results_v2.json  june_30_results_v1.json  june_30_results_v2.json  june_30_results_v2_select_results.json
post_processing/outputs/: coords_traj_1.txt  coords_traj_1001.txt  coords_traj_1002.txt  coords_traj_2.txt  (+12 more)
profiling/: flamegraph.bash
snl_data/: localsolve_absolutenoise_1000rep_absolutematrix_10robots.xlsx  localsolve_relativenoise_1000rep_absolutematrix_10robots.xlsx  localsolve_relativenoise_1000rep_relativematrix_10robots.xlsx  sdponly_absolutenoise_1000rep_relativematrix_10robots.xlsx  sdponly_absolutenoise_1000rep_relativematrix_14robots.xlsx  sdponly_relativenoise_1000rep_absolutematrix_10robots.xlsx  sdponly_relativenoise_1000rep_absolutematrix_14robots.xlsx
src/: graph.cpp  main.cpp  plot.cpp  robot.cpp  sample.cpp  sampleSCIP.cpp  world.cpp
test_scripts/: 0_temp.json  1_temp.json  2_temp.json  test_a_optimality_computations.py  test_binary_matrices.py  test_cache_rigidity.py  test_configs.py  test_eigval_computations.py  test_fisher_matrix_computations.py  test_optimality_criteria_snl.py  test_rigidity_snl.py
(+30 files in other folders)
